# TopDownHockey_Scraper

./: .gitignore  CLAUDE.md  INTEGRATION_EXAMPLE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.claude/commands/: release.md
.claude/skills/: release.md
.github/workflows/: publish.yml
src/TopDownHockey_Scraper/: TopDownHockey_EliteProspects_Scraper.py  TopDownHockey_NHL_Scraper.py  TopDownHockey_NHL_Scraper_OG.py  TopDownHockey_NHL_Scraper_fixed.py  TopDownHockey_NHL_Scraper_v2.py  __init__.py  name_corrections.py  portrait_links.csv  scrape_nhl_api_events.py  shift_processing.py  shift_processing_api.py
src/TopDownHockey_Scraper/data/: handedness.csv
tests/: test_scraper.py
