[metadata]
name = TopDownHockey_Scraper
version = 6.1.37
author = Patrick Bacon
author_email = patrick.s.bacon@gmail.com
description = A package built for scraping hockey data from EliteProspects, the NHL's HTML/API reports, and ESPN's XML reports.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TopDownHockey/TopDownHockeyScraper
project_urls = 
	Bug Tracker = https://github.com/TopDownHockey/TopDownHockeyScraper/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	bs4
	pandas
	requests
	xmltodict
	lxml
	natsort

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

